# or-shifty

./: .gitignore  .isort.cfg  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  run_example.bat  run_real.bat  setup.cfg  shifty.app
.github/workflows/: pythonpackage.yml
examples/dutyofficer/: config.json  config_params.json  configgenerator.py  history.csv  history.json  historycsv2json.py  people.csv
examples/simple/: config.json  history.json
or_shifty/: app.py  cli.py  config.py  constraints.py  history.py  history_metrics.py  indexer.py  model.py  objective.py  person.py  shift.py
shifty/: __init__.py  app.py  base_types.py  cli.py  config.py  constraints.py  data.py  history.py  history_metrics.py  model.py  objective.py  shift.py  shifty.py
shifty/data/: __init__.py  base.py  config.py  history.py  run.py
tests/: test_basic_assignment.py  test_cli.py  test_constraints.py  test_history.py  test_history_metrics.py  test_indexer.py  test_model.py  test_objective.py  test_shift.py  test_shifty.py
tests/test_files/: config.json  history.json
tests/test_files/cli/: config.json  output.json
tests/test_files/invalid_evaluation_cli/: config.json  history.json  output.json
tests/test_files/no_solution/: config.json  history.json
