[tool.poetry]
name = "shifty"
version = "0.1.0"
license = "Apache-2.0"
description = ""
authors = ["Thomas Maroulis <thomasmaroulis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
ortools = "^7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
black = { version = "*", allows-prereleases = true }
flake8 = "*"
isort = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
