[tool.poetry]
name = "or-shifty"
version = "1.0.0"
license = "MIT"
description = ""
authors = ["Thomas Maroulis <thomasmaroulis@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Dalamar42/or-shifty"
repository = "https://github.com/Dalamar42/or-shifty"
keywords = ["rota", "scheduling", "on-call"]

[tool.poetry.scripts]
shifty = "or_shifty.app:main"

[tool.poetry.dependencies]
python = "^3.7"
ortools = "^7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
black = { version = "*", allow-prereleases = true }
flake8 = "*"
isort = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
